--- a/class_def.ipynb
+++ b/class_def.ipynb
@@ -95,14 +95,11 @@
     "        'rating_one_count',\n",
     "        'tags',\n",
     "        'product_color',\n",
-    "        'merchant_title',\n",
-    "        'merchant_name',\n",
     "        'merchant_rating_count',\n",
     "        'merchant_rating',\n",
     "        'product_picture',\n",
     "    ]\n",
     "    \n",
-    "\n",
     "    def __init__(\n",
     "        self,\n",
     "        do_fsim = False, # Feature-based similarity index (FSIM)                                   # 0 to 1, 0 == bad, 1 == identical                      # ascending=False\n",
@@ -130,11 +127,12 @@
     "        self.do_uiq  = do_uiq  # Universal image quality index (UIQ)\n",
     "\n",
     "        # read data\n",
-    "        self.raw     = self.read_csv() # simple read\n",
-    "        self.df      = self.clean_df()\n",
+    "        self.raw     = self.read_csv()   # raw dataset\n",
+    "        self.df      = self.clean_df()   # cleaned up dataset\n",
+    "        self.df_num  = self.df_numeric() # transformed / scaled / pca'ed dataset\n",
     "        \n",
     "        # precompute k means\n",
-    "        self.kmean_groups = self.precompute_kmeans()\n",
+    "        #self.kmean_groups = self.precompute_kmeans()\n",
     "        \n",
     "    # simple read\n",
     "    def read_csv(self) -> pd.DataFrame :\n",
@@ -150,14 +148,15 @@
     "        return df\n",
     "\n",
     "    # extract df of numeric features + populate nans\n",
-    "    def df_num(\n",
+    "    def df_numeric(\n",
     "        self,\n",
-    "        should_impute_nans      : bool = True,\n",
-    "        should_standard_scale   : bool = True,\n",
-    "        #should_minmax_scale     : bool = True,\n",
-    "        #should_minmax_scale_abs : float = 2,\n",
-    "        should_pca              : bool = True,\n",
-    "        should_pca_components   : float = 6,\n",
+    "        should_impute_nans      : bool = True,  # rather than trashing entry, populate missing ratings with population mean\n",
+    "        should_log_transform    : bool = True,  # make data distribution more normal like\n",
+    "        should_standard_scale   : bool = True,  # N(0,1) the data\n",
+    "        should_minmax_scale     : bool = False,\n",
+    "        should_minmax_scale_abs : float = 2,\n",
+    "        should_pca              : bool = True,  # reduce dimensionality to speed up analysis\n",
+    "        should_pca_components   : float = 6,    # elbow / eyeballed optimal principal components to use\n",
     "        ) -> pd.DataFrame :\n",
     "        # strip\n",
     "        df_num = self.df.select_dtypes(include=['int64','float64']).copy()\n",
@@ -168,19 +167,22 @@
     "            imputed = imp.fit_transform(df_num)\n",
     "            df_num = pd.DataFrame(imputed,index=df_num.index,columns=df_num.columns)\n",
     "    \n",
+    "        # apply log transform\n",
+    "        if should_log_transform:\n",
+    "            df_num = np.log(df_num+1.1)\n",
+    "            \n",
     "        # apply standard scaler\n",
     "        if should_standard_scale:\n",
     "            s_scaler = StandardScaler()\n",
     "            scaled = s_scaler.fit_transform(df_num)\n",
     "            df_num = pd.DataFrame(scaled,index=df_num.index,columns=df_num.columns)\n",
     "            \n",
-    "        '''\n",
     "        # apply min max scaler\n",
     "        if should_minmax_scale:\n",
     "            mm_scaler = MinMaxScaler(feature_range=(should_minmax_scale_abs*-1,should_minmax_scale_abs))\n",
     "            scaled = mm_scaler.fit_transform(df_num)\n",
     "            df_num = pd.DataFrame(scaled,index=df_num.index,columns=df_num.columns)\n",
-    "        ''' \n",
+    "        \n",
     "        # apply pca\n",
     "        if should_pca:\n",
     "            pca = PCA(n_components=should_pca_components)\n",
