add TLDR and exactify_search_tokens
descriptions

--- a/text_search.ipynb
+++ b/text_search.ipynb
@@ -2,6 +2,40 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "cb5a0b05",
+   "metadata": {},
+   "source": [
+    "# [TLDR] PROGRESSIVELY BUILT UP A TEXT SEARCH\n",
+    "- main points include\n",
+    "\n",
+    "1. input `search_string` broken up (tokenized) on `\\W` special chars\n",
+    "\n",
+    "2. can look for tokens in \"product descriptor\" either by (a) exact matching tokens OR (b) simple matching of tokens\n",
+    "- exact matching\n",
+    "  - pros\n",
+    "    - avoids matching the token `red` in strings like `prediction`, i.e. avoids spurious matches\n",
+    "  - cons\n",
+    "    - tags are not all space separated so will not match anything, i.e. cannot find `white` in `whitesandalsbeach` \n",
+    "- simple matching\n",
+    "  - pros and cons are literally flip of that in exact matching, hard to say which is better\n",
+    "  \n",
+    "3. \"product descriptor\" is a merge of `title`, `title_orig`, `tags` and `product_color`\n",
+    "- all seem useful\n",
+    "- `title` and `title_orig` should be similar, one is French the other is English translation, who knows which is better, i.e. use both\n",
+    "- `tags` seem very useful but format isn't standardized, some are space separated, others `;` separated, others NOT separated\n",
+    "- `product_color` marginally useful\n",
+    "\n",
+    "4. given n tokens extracted from the `search_string`, trying to find matches for each token\n",
+    "- can rank products on the number of `n` token hits\n",
+    "- can also do a weighted token hit (based on the rarity of a token), i.e. rare tokens are stronger hits than common tokens, \"goth\" vs \"summer\"\n",
+    "\n",
+    "5. search tokens that receive 0 hits on the product list are useless, can give hints to the user to try different search strings\n",
+    "\n",
+    "6. top n text hits can be return along with their pictures as well for debugging / logic checks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aba59712",
    "metadata": {},
    "source": [
@@ -39,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbe18045",
+   "id": "8a19756b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,19 +210,22 @@
     "SEARCH_TOKENS = List[str]\n",
     "def tokenize_search_string(\n",
     "    search_string : SEARCH_STRING,\n",
-    "    exact_search  : bool = True,\n",
     "    ) -> SEARCH_TOKENS :\n",
     "    tokens = re.split('\\W+',search_string) # partition string on non-alphanumeric chars\n",
     "    tokens = [token.lower() for token in tokens] # set tokens to lower case\n",
     "    tokens = list(set(tokens)) # uniques\n",
-    "    if exact_search: tokens = ['\\\\b'+x+'\\\\b' for x in tokens] # force exact match, dont want to match 'red' from 'altered'\n",
     "    return tokens\n",
     "\n",
-    "#bool(re.search('\\\\bsets\\\\b',merged_product_identifier_text()[0],flags=re.IGNORECASE))\n",
+    "def exactify_search_tokens(\n",
+    "    search_tokens : SEARCH_TOKENS,\n",
+    "    ) -> SEARCH_TOKENS :\n",
+    "    return ['\\\\b'+token+'\\\\b' for token in search_tokens] # force exact match, dont want to match 'red' from 'altered'\n",
+    "\n",
+    "#bool(re.search('\\\\bsets\\\\b',make_product_descriptor()[0],flags=re.IGNORECASE))\n",
     "\n",
     "display(tokenize_search_string('absc#dd\tddd  ,#,      asd;f    asdf asdf asdf asdf asdf asdfsd000_22220'))\n",
     "display(tokenize_search_string('womens banana    dress dress me me me'))\n",
-    "display(tokenize_search_string('womens banana    dress dress me me me',exact_search=False))"
+    "display(exactify_search_tokens(tokenize_search_string('womens banana    dress dress me me me')))\n"
    ]
   },
   {
@@ -211,7 +248,7 @@
     "    return '|'.join(search_tokens)\n",
     "\n",
     "display(search_tokens_to_re_pattern(tokenize_search_string('womens banana    dress dress me me me')))\n",
-    "display(search_tokens_to_re_pattern(tokenize_search_string('womens banana    dress dress me me me',exact_search=False)))"
+    "display(search_tokens_to_re_pattern(exactify_search_tokens(tokenize_search_string('womens banana    dress dress me me me'))))"
    ]
   },
   {
@@ -239,14 +276,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def merged_product_identifier_text() -> pd.Series(dtype='str') :\n",
-    "    descriptor_colnames = ['title','title_orig','tags','product_color'] # cols of interest\n",
-    "    df_descriptors      = d.df[descriptor_colnames] # extract columns\n",
-    "    df_descriptors      = df_descriptors.apply(lambda x:' '.join([str(x) for x in x.values]),axis=1) # merge with | as sep\n",
-    "    #df_descriptors      = df_descriptors.str.replace('\\'','') # strip appostrophes\n",
-    "    df_descriptors      = df_descriptors.str.replace('\\W',' ',regex=True) # strip special chars\n",
-    "    return df_descriptors\n",
-    "merged_product_identifier_text()"
+    "COLNAME = str\n",
+    "\n",
+    "def make_product_descriptor(\n",
+    "    descriptor_colnames : List[COLNAME] = ['title','title_orig','tags','product_color'] # cols of interest\n",
+    "    ) -> pd.Series(dtype='str') :\n",
+    "    descriptors = d.df[descriptor_colnames] # extract columns\n",
+    "    descriptors = descriptors.apply(lambda x:' '.join([str(x) for x in x.values]),axis=1) # merge with | as sep\n",
+    "    #descriptors = descriptors.str.replace('\\'','') # strip appostrophes\n",
+    "    descriptors = descriptors.str.replace('\\W',' ',regex=True) # strip special chars\n",
+    "    return descriptors\n",
+    "make_product_descriptor()"
    ]
   },
   {
@@ -266,25 +306,39 @@
    },
    "outputs": [],
    "source": [
+    "SEARCH_STRING = str\n",
+    "TOKENS        = str\n",
+    "\n",
     "# weighted token search\n",
     "# looking at all string product identifiers (title, titie_orig, tags)\n",
     "# return weighted value of tokens found (e.g. 3x 2x 1x)\n",
     "def tokens_found_count(\n",
-    "    pd_series     : pd.Series(dtype='str'),\n",
-    "    search_string : str,\n",
-    "    top_n         : int  = 5,\n",
-    "    exact_search  : bool = False,\n",
-    "    verbose       : int  = 0, # show workings\n",
+    "    product_descriptor : pd.Series(dtype='str'),\n",
+    "    search_tokens      : List[TOKENS]  = None,\n",
+    "    search_string      : SEARCH_STRING = None,\n",
+    "    exact_search       : bool          = False,\n",
+    "    show_top_n         : int           = 5,\n",
+    "    verbose            : int           = 0, # show workings\n",
     "    ) -> pd.Series(dtype='int') :\n",
     "    ###########################################################\n",
-    "    # identify which tokens matched\n",
+    "    # get search tokens\n",
     "    ###########################################################\n",
-    "    # strip tokens from search string\n",
-    "    search_tokens = tokenize_search_string(search_string=search_string,exact_search=exact_search)\n",
-    "    \n",
-    "    # figure out which matched / get List[pd.Series(dtype=bool)]\n",
+    "    if search_tokens is None:\n",
+    "        search_tokens = tokenize_search_string(search_string=search_string) # strip them from search_string if search_tokens NOT provided\n",
+    "\n",
+    "    ###########################################################\n",
+    "    # amend tokens to exactify search on request\n",
+    "    ###########################################################\n",
+    "    if exact_search:\n",
+    "        search_tokens_orig = search_tokens\n",
+    "        search_tokens = exactify_search_tokens(search_tokens)\n",
+    "        \n",
+    "    ###########################################################\n",
+    "    # figure out which tokens are found in product_descriptor\n",
+    "    ###########################################################\n",
+    "    # returns a List[pd.Series(dtype=bool)], each list entry denoteing if nth token is found (exact or simple matching)\n",
     "    found_count_list = [\n",
-    "        pd_series.apply(\n",
+    "        product_descriptor.apply(\n",
     "            lambda x:bool(re.search(token,x,flags=re.IGNORECASE))\n",
     "        ) for token in search_tokens\n",
     "    ]\n",
@@ -293,7 +347,7 @@
     "    found_count_df = pd.concat(found_count_list,axis=1)\n",
     "    found_count_df.columns = search_tokens\n",
     "    \n",
-    "    # series of found cfound_count_series\n",
+    "    # series of found_count_series\n",
     "    found_count_series = found_count_df.sum(axis=1)\n",
     "    found_count_series.name = 'tokens_found_count'\n",
     "    \n",
@@ -325,7 +379,11 @@
     "            helpful_string = ', '.join(useless_tokens[:-1]) + ' and ' + useless_tokens[-1]\n",
     "\n",
     "        # show helping string\n",
-    "        print(f'searchbot: no matches for {helpful_string}, try looking for something else')\n",
+    "        if exact_search:\n",
+    "            helpful_string = helpful_string.replace('\\\\b','')\n",
+    "            print(f'searchbot: no exact matches for {helpful_string}, try searching for something else')\n",
+    "        else:\n",
+    "            print(f'searchbot: no matches for {helpful_string}, try searching for something else')\n",
     "        print()\n",
     "\n",
     "    ###########################################################\n",
@@ -338,7 +396,7 @@
     "            discounted_token_df,\n",
     "            found_count_series.to_frame('tokens matched'),\n",
     "            found_count_df,\n",
-    "            pd_series.to_frame()\n",
+    "            product_descriptor.to_frame('product_descriptor')\n",
     "        ],\n",
     "        axis=1\n",
     "    )\n",
@@ -352,50 +410,54 @@
     "    # results chat\n",
     "    ###########################################################\n",
     "    if len(found_count_summary)==0:\n",
-    "        print(f'results: I got nothing! T⌓T')\n",
+    "        print(f'results: I got nothing! T⌓T') # unhappy\n",
     "    elif len(found_count_summary)==1:\n",
-    "        print(f'results: only 1 hit ￣ω￣, I hope it\\'s what you wanted!')\n",
-    "    elif len(found_count_summary)<10:\n",
-    "        print(f'results: {len(found_count_summary)} items found, I can do better if you can be more specific')\n",
-    "    \n",
+    "        print(f'results: only 1 hit ￣ω￣, I hope it\\'s what you wanted!') # unsure\n",
+    "    elif len(found_count_summary)<=5:\n",
+    "        print(f'results: I only got {len(found_count_summary)} results, see anything you like?') # tight search\n",
+    "    elif len(found_count_summary)<=10:\n",
+    "        print(f'results: {len(found_count_summary)} results found') # normal\n",
+    "    elif len(found_count_summary)>10:\n",
+    "        print(f'results: {len(found_count_summary)} items found, I can do better if you can be more specific') # should do better\n",
     "    \n",
     "    '''\n",
     "    # tag on searched string as well for debug purposes\n",
     "    if verbose>0:\n",
-    "        found_count_summary = found_count_summary.join(pd_series.to_frame())\n",
+    "        found_count_summary = found_count_summary.join(product_descriptor.to_frame())\n",
     "    ''' \n",
     "    \n",
     "    ###########################################################\n",
-    "    # plot top_n results\n",
+    "    # show_top_n results\n",
     "    ###########################################################\n",
-    "    if len(found_count_summary)>0:\n",
-    "        d.get_product_pictures(locs=found_count_summary.index[:top_n])\n",
+    "    if show_top_n and len(found_count_summary)>0:\n",
+    "        d.get_product_pictures(locs=found_count_summary.index[:show_top_n])\n",
     "        plt.show()\n",
     "\n",
     "    ###########################################################\n",
     "    # return\n",
     "    ###########################################################\n",
     "    if verbose>0:\n",
-    "        return found_count_summary\n",
+    "        return found_count_summary.head(20)\n",
     "    else:\n",
-    "        return found_count_summary.head(top_n)\n",
+    "        return found_count_summary.head(show_top_n)\n",
     "\n",
-    "#tokens_found_count(merged_product_identifier_text(),['summer','short'],verbose=1).head(10) # basic logic\n",
-    "#tokens_found_count(merged_product_identifier_text(),['harajuku','goth','sexy'],verbose=1).head(10) # test rare token logic\n",
-    "#tokens_found_count(merged_product_identifier_text(),['kids','top','banana','bobby','henry'],verbose=0).head(10) # test bad search tokens\n",
-    "#tokens_found_count(merged_product_identifier_text(),['kids','sandals'],verbose=0).head(10) # test\n",
-    "#tokens_found_count(merged_product_identifier_text(),['balloon'],top_n=5,verbose=0) # test top_n\n",
-    "#tokens_found_count(merged_product_identifier_text(),['balloon'],top_n=10,verbose=1).head(20) # test results snipping\n",
-    "#tokens_found_count(merged_product_identifier_text(),['banana'],top_n=10,verbose=1).head(20) # test results chat\n",
-    "#tokens_found_count(merged_product_identifier_text(),['sandal'],top_n=10,verbose=1).head(20) # test results chat\n",
-    "#tokens_found_count(merged_product_identifier_text(),['sandal','red'],top_n=10,verbose=1).head(20) # test results chat\n",
-    "#tokens_found_count(merged_product_identifier_text(),'sandal red',top_n=10,verbose=1).head(20) # test results chat\n",
-    "#tokens_found_count(merged_product_identifier_text(),['top','skinny','red'],top_n=10,verbose=1).head(20) # test results chat\n",
-    "#tokens_found_count(merged_product_identifier_text(),'top red',top_n=5,verbose=1).head(20) # test results chat\n",
-    "#tokens_found_count(merged_product_identifier_text(),'top red',top_n=5,exact_search=True,verbose=1).head(20) # test exact search\n",
-    "#tokens_found_count(merged_product_identifier_text(),'exy',top_n=5,verbose=1).head(20) # test exact search\n",
-    "#tokens_found_count(merged_product_identifier_text(),'exy',top_n=5,exact_search=True,verbose=1).head(20) # test exact search\n",
-    "tokens_found_count(merged_product_identifier_text(),'top red',top_n=5,exact_search=True,verbose=1).head(20) # test exact search"
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['summer','short'],verbose=1) # basic logic\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['harajuku','goth','sexy'],verbose=1) # test rare token logic\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['kids','top','banana','bobby','henry'],verbose=0) # test bad search tokens\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['kids','sandals'],verbose=1) # test\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['balloon'],show_top_n=5,verbose=1) # test show_top_n\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['balloon'],show_top_n=5,verbose=1) # test results snipping\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['banana'],show_top_n=5,verbose=1) # test results chat#\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['sandal'],show_top_n=5,verbose=1) # test results chat\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['sandal','red'],show_top_n=5,verbose=1) # test results chat\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_string='sandal red',show_top_n=5,verbose=1) # test results chat\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['top','skinny','red'],show_top_n=5,verbose=1) # test results chat\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['top','skinny','red'],show_top_n=5,exact_search=True,verbose=1) # test results chat\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_string='top red',show_top_n=5,verbose=1) # test results chat\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_string='top red',show_top_n=5,exact_search=True,verbose=1) # test exact search\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_string='exy',show_top_n=5,verbose=1) # test exact search\n",
+    "#tokens_found_count(product_descriptor=make_product_descriptor(),search_string='exy',show_top_n=5,exact_search=True,verbose=1) # test exact search\n",
+    "tokens_found_count(product_descriptor=make_product_descriptor(),search_string='top red',show_top_n=5,exact_search=True,verbose=1) # test exact search"
    ]
   }
  ],
