add TLDR and add different transform functions
check Dataset.df_numeric() output

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -2,6 +2,68 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f3764b1b",
+   "metadata": {},
+   "source": [
+    "# [TLDR] CONCLUSIONS\n",
+    "- after understanding data from each column I feel \n",
+    "\n",
+    "1. the following columns are NOT useful for the following reasons (I remove them from consideration as imo it would be fitting noise)\n",
+    "\n",
+    "    ```\n",
+    "    'currency_buyer',                ALWAYS EUR \n",
+    "    'uses_ad_boosts',                IS 0 OR 1, IS MORE RELEVANT TO SEARCH RESULT AUGMENTATION, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'badges_count',                  IS 0-1-2-3, COUNTS N-BADGES, IS MORE RELEVANT TO SEARCH RESULT AUGMENTATION, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'badge_local_product',           IS 0 OR 1, LOCAL PRODUCT OR NOT, IS MORE RELEVANT TO SEARCH RESULT AUGMENTATION, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'badge_product_quality',         IS 0 OR 1, IS DEEMED QUALITY PRODUCT OR NOT, IS MORE RELEVANT TO SEARCH RESULT AUGMENTATION, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'badge_fast_shipping',           IS 0 OR 1, HAS FAST SHIPPING NOT, IS MORE RELEVANT TO SEARCH RESULT AUGMENTATION, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'product_variation_size_id',     SIZES AVAILABLE, NOT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'product_variation_inventory',   IS BETWEEN 0 TO 50, IS RELATED TO INVENTORY MANAGEMENT, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'shipping_option_name',          SHIPPING COMPANY NAME, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'shipping_option_price',         SHIPPING PRICING, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'shipping_is_express',           SHIPPING EXPRESSNESS OR NOT, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'countries_shipped_to',          SHIPPING LOCATIONS, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'inventory_total',               IS BETWEEN 0 TO 50, IS RELATED TO INVENTORY MANAGEMENT, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'has_urgency_banner',            IS 0 OR 1, IS DEEMED URGENT OR NOT, IS MORE RELEVANT TO SEARCH RESULT AUGMENTATION, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'urgency_text',                  SAME AS has_urgency_banner\n",
+    "    'origin_country',                COUNTRY MADE, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'merchant_info_subtitle',        WISH MERCHANT IDENTIFIER, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'merchant_id',                   WISH MERCHANT IDENTIFIER, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'merchant_has_profile_picture',  WISH MERCHANT IDENTIFIER, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'merchant_profile_picture',      WISH MERCHANT IDENTIFIER, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'merchant_title',                WISH MERCHANT IDENTIFIER, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'merchant_name',                 WISH MERCHANT IDENTIFIER, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'product_url',                   DEAD LINK, BROWSER INFO, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'product_id',                    WISH PRODUCT IDENTIFIER, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'theme',                         ALWAYS SUMMER, DATA SCRAPE IDENTIFIER, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    'crawl_month'                    ALWAYS 202008, DATA SCRAPE IDENTIFIER, NOT RELEVANT FOR FINDING SIMILAR PRODUCTS\n",
+    "    ```\n",
+    "    \n",
+    "2. the following columns COULD be useful for analysis AND could do with the following transformations to make them more normal like (decided by looking at qqplots)\n",
+    "\n",
+    "    ```\n",
+    "    'title',                         PRODUCT DESCRIPTOR STRING IN FRENCH     TEXT SEARCH\n",
+    "    'title_orig',                    PRODUCT DESCRIPTOR STRING IN ENGLISH    TEXT SEARCH\n",
+    "    'price',                         SEEMS LIKE PURCHASE PRICE               NUMERIC                       LOG / SQRT\n",
+    "    'retail_price',                  SEEMS LIKE RECOMMENDED RETAIL PRICE     NUMERIC                       LOG\n",
+    "    'units_sold',                    SEEMS LIKE CATEGORY OF SOLDNESS         NUMERIC                       LOG\n",
+    "    'rating',                        BETWEEN 0-5, IS WAVG OF RATING_*_COUNT  NUMERIC                       LOG\n",
+    "    'rating_count',                  COUNTER OF TOTAL RATINGS                NUMERIC                       LOG\n",
+    "    'rating_five_count',             COUNTER OF 5 STAR RATINGS               NUMERIC                       LOG\n",
+    "    'rating_four_count',             COUNTER OF 4 STAR RATINGS               NUMERIC                       LOG\n",
+    "    'rating_three_count',            COUNTER OF 3 STAR RATINGS               NUMERIC                       LOG\n",
+    "    'rating_two_count',              COUNTER OF 2 STAR RATINGS               NUMERIC                       LOG\n",
+    "    'rating_one_count',              COUNTER OF 1 STAR RATINGS               NUMERIC                       LOG\n",
+    "    'tags',                          ENGLISH TAGS                            TEXT SEARCH\n",
+    "    'product_color',                 ENGLISH COLOURS                         TEXT SEARCH\n",
+    "    'merchant_rating_count',         COUNTER OF MERCHANT RATINGS             NUMERIC                       LOG\n",
+    "    'merchant_rating',               BETWEEN 0-5, MERCHANT RATING            NUMERIC                       NONE\n",
+    "    'product_picture',               URL TO PICTURE OR PRODUCT               IMAGE METRICS \n",
+    "    ```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2a4f72be",
    "metadata": {},
    "source": [
@@ -164,7 +226,7 @@
     "def inspect_numeric(\n",
     "    col : str, # column name\n",
     "    ) -> None :\n",
-    "    fig,ax=plt.subplots(3,2,figsize=(20,20))\n",
+    "    fig,ax=plt.subplots(3,4,figsize=(30,20))\n",
     "\n",
     "    ###################################\n",
     "    # raw\n",
@@ -175,10 +237,11 @@
     "\n",
     "    # hist\n",
     "    raw.hist(ax=ax[1,0])\n",
-    "    ax[0,1].set_title('[raw] hist')\n",
+    "    ax[1,0].set_title('[raw] hist')\n",
     "\n",
     "    # qqplot\n",
     "    sm.qqplot(raw-raw.mean(), line ='45',ax=ax[2,0])\n",
+    "    ax[2,0].set_title('[raw] qqplot')\n",
     "\n",
     "    ###################################\n",
     "    # logged\n",
@@ -186,15 +249,49 @@
     "    # logged\n",
     "    logged=df[col].copy()\n",
     "    logged[logged<=0]=np.nan\n",
-    "    logged=np.log(logged)\n",
+    "    logged=np.log(logged+1)\n",
     "    logged.plot(title=f'[logged] {col}',ax=ax[0,1])\n",
     "\n",
     "    # hist\n",
     "    logged.hist(ax=ax[1,1])\n",
-    "    ax[0,1].set_title('[logged] hist')\n",
+    "    ax[1,1].set_title('[logged] hist')\n",
     "\n",
     "    # qqplot\n",
     "    sm.qqplot(logged-logged.mean(), line ='45',ax=ax[2,1])\n",
+    "    ax[2,1].set_title('[logged] qqplot')\n",
+    "\n",
+    "    ###################################\n",
+    "    # sqrt\n",
+    "    ###################################\n",
+    "    # sqrted\n",
+    "    sqrted=df[col].copy()\n",
+    "    sqrted[sqrted<=0]=np.nan\n",
+    "    sqrted=np.sqrt(sqrted)\n",
+    "    sqrted.plot(title=f'[sqrted] {col}',ax=ax[0,2])\n",
+    "\n",
+    "    # hist\n",
+    "    sqrted.hist(ax=ax[1,2])\n",
+    "    ax[1,2].set_title('[sqrted] hist')\n",
+    "\n",
+    "    # qqplot\n",
+    "    sm.qqplot(sqrted-sqrted.mean(), line ='45',ax=ax[2,2])\n",
+    "    ax[2,2].set_title('[sqrted] qqplot')\n",
+    "\n",
+    "    ###################################\n",
+    "    # arcsin\n",
+    "    ###################################\n",
+    "    # arcsined\n",
+    "    arcsined=df[col].copy()\n",
+    "    arcsined=np.arcsin(arcsined)\n",
+    "    arcsined.plot(title=f'[arcsined] {col}',ax=ax[0,3])\n",
+    "\n",
+    "    # hist\n",
+    "    arcsined.hist(ax=ax[1,3])\n",
+    "    ax[1,3].set_title('[arcsined] hist')\n",
+    "\n",
+    "    # qqplot\n",
+    "    sm.qqplot(arcsined-arcsined.mean(), line ='45',ax=ax[2,3])\n",
+    "    ax[2,3].set_title('[arcsined] qqplot')\n",
     "\n",
     "    ###################################\n",
     "    # others\n",
@@ -256,18 +353,6 @@
    "source": [
     "df_num = df.select_dtypes(include=['int64','float64'])\n",
     "df_num"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78a60c9d",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "sns.pairplot(df_num)"
    ]
   },
   {
@@ -794,10 +879,244 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "01227141",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df.reset_index().groupby('product_picture')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76e269c7",
+   "metadata": {},
+   "source": [
+    "# CHECK `df_num` FROM `Dataset()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4f491dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run class_def.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "877a60df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d=Dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d134fdc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.raw.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73c5a039",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76a8d9a9",
+   "metadata": {},
+   "source": [
+    "### check nan imputes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9b1916f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=d.df_numeric(\n",
+    "    should_impute_nans       = True,  # rather than trashing entry, populate missing ratings with population mean\n",
+    "    should_log_transform     = False,  # make data distribution more normal like\n",
+    "    should_standard_scale    = False,  # N(0,1) the data\n",
+    "    should_minmax_scale      = False,\n",
+    "    should_minmax_scale_abs  = 2,\n",
+    "    should_pca               = False,  # reduce dimensionality to speed up analysis\n",
+    "    should_pca_components    = 6,    # elbow / eyeballed optimal principal components to use\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3386a36f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02911f6f",
+   "metadata": {},
+   "source": [
+    "### check log transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1695a57e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=d.df_numeric(\n",
+    "    should_impute_nans       = True,  # rather than trashing entry, populate missing ratings with population mean\n",
+    "    should_log_transform     = True,  # make data distribution more normal like\n",
+    "    should_standard_scale    = False,  # N(0,1) the data\n",
+    "    should_minmax_scale      = False,\n",
+    "    should_minmax_scale_abs  = 2,\n",
+    "    should_pca               = False,  # reduce dimensionality to speed up analysis\n",
+    "    should_pca_components    = 6,    # elbow / eyeballed optimal principal components to use\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3ecc92e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c4e3a5a",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for col in x.columns:\n",
+    "    ax=x[col].hist()\n",
+    "    ax.set_title(f'hist {col}')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e723dfc9",
+   "metadata": {},
+   "source": [
+    "### check standard scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab903c8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=d.df_numeric(\n",
+    "    should_impute_nans       = True,  # rather than trashing entry, populate missing ratings with population mean\n",
+    "    should_log_transform     = True,  # make data distribution more normal like\n",
+    "    should_standard_scale    = True,  # N(0,1) the data\n",
+    "    should_minmax_scale      = False,\n",
+    "    should_minmax_scale_abs  = 2,\n",
+    "    should_pca               = False,  # reduce dimensionality to speed up analysis\n",
+    "    should_pca_components    = 6,    # elbow / eyeballed optimal principal components to use\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faaa0415",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02f8a8c0",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for col in x.columns:\n",
+    "    ax=x[col].hist()\n",
+    "    ax.set_title(f'hist {col}')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af144cfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=d.df_numeric(\n",
+    "    should_impute_nans       = True,  # rather than trashing entry, populate missing ratings with population mean\n",
+    "    should_log_transform     = True,  # make data distribution more normal like\n",
+    "    should_standard_scale    = True,  # N(0,1) the data\n",
+    "    should_minmax_scale      = False,\n",
+    "    should_minmax_scale_abs  = 2,\n",
+    "    should_pca               = False,  # reduce dimensionality to speed up analysis\n",
+    "    should_pca_components    = 6,    # elbow / eyeballed optimal principal components to use\n",
+    ")\n",
+    "x.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5be8813d",
+   "metadata": {},
+   "source": [
+    "### check pca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5f465b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=d.df_numeric(\n",
+    "    should_impute_nans       = True,  # rather than trashing entry, populate missing ratings with population mean\n",
+    "    should_log_transform     = True,  # make data distribution more normal like\n",
+    "    should_standard_scale    = True,  # N(0,1) the data\n",
+    "    should_minmax_scale      = False,\n",
+    "    should_minmax_scale_abs  = 2,\n",
+    "    should_pca               = True,  # reduce dimensionality to speed up analysis\n",
+    "    should_pca_components    = 6,    # elbow / eyeballed optimal principal components to use\n",
+    ")\n",
+    "x.describe()"
    ]
   }
  ],
