gather generic imports
pd and np

--- a/ipynb_setup.ipynb
+++ b/ipynb_setup.ipynb
@@ -42,7 +42,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_rows', 500)\n",
-    "pd.set_option('max_colwidth',None)"
+    "pd.set_option('max_colwidth',None)\n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "import seaborn as sns"
    ]
   }
  ],
